Changed the manuscriptTitle and path to empty strings if MANUSCRIPT is undefined or null Wrapped the fetch for the manuscript.json file in a check to only do that if the manuscript title isnt blank. fixed a broken image url link in _BRpages.scss partial Project Build

--- a/BookReader/BookReader.css
+++ b/BookReader/BookReader.css
@@ -599,7 +599,7 @@ svg.BRPageLayer {
   transform: rotateY(-90deg);
 }
 .br-mode-2up__leafs, .br-mode-2up__leafs.br-mode-2up__leafs--flipping::before {
-  background: transparent url(images/back_pages.png) repeat scroll 0% 0%;
+  background: transparent url("/wp-content/themes/slam/dependencies/manuscript/BookReader/images/back_pages.png") repeat scroll 0% 0%;
 }
 .br-mode-2up__leafs .br-leaf-edges__bar {
   display: none;
