--- a/src/css/_BRpages.scss
+++ b/src/css/_BRpages.scss
@@ -147,7 +147,7 @@ svg.BRPageLayer {
   }
 
   &, &.br-mode-2up__leafs--flipping::before {
-    background: transparent url(images/back_pages.png) repeat scroll 0% 0%;
+    background: transparent url('/wp-content/themes/slam/dependencies/manuscript/BookReader/images/back_pages.png') repeat scroll 0% 0%;
   }
 
   .br-leaf-edges__bar {
